<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/buttonDropdown"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="168dp"
        android:adjustViewBounds="true"
        android:background="@drawable/semi_circle_action"
        android:cropToPadding="false"
        android:focusable="false"
        android:onClick="buttonView"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/menu_down_arrow" />


    <ImageButton
        android:id="@+id/buttonMagazine"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:alpha="0"
        android:background="@drawable/round_button"
        android:cropToPadding="false"
        android:enabled="false"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/magazine_icon"
        android:textColor="#fff"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/buttonProfile"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignBottom="@id/buttonMagazine"
        android:layout_marginEnd="15dp"
        android:layout_toStartOf="@id/buttonMagazine"
        android:background="@drawable/round_button"
        android:cropToPadding="false"
        android:enabled="false"
        android:onClick="buttonTopMenu"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/userprofile"
        android:textColor="#fff"
        android:visibility="gone" />
    <TextView
        android:id="@+id/textViewSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewSearch"
        android:layout_alignStart="@id/buttonSearch"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/buttonSearch"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignBottom="@id/buttonMagazine"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@id/buttonMagazine"
        android:background="@drawable/round_button"
        android:cropToPadding="false"
        android:enabled="false"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/magnifyingglass"
        android:textColor="#fff"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/textViewProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:visibility="gone"
        android:layout_alignStart="@id/buttonProfile"
        android:text="@string/textViewProfile" />

    <TextView
        android:id="@+id/textViewMagazine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignStart="@id/buttonMagazine"
        android:text="@string/textViewMagazine" />


</RelativeLayout>